# new_lifebot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
locales/: phrases_ru.json
src/: audio_service.py  bot.py  config.py  db.py  delegation_reminders.py  init_templates.py  language_scheduler.py  llm_service.py  scheduler.py  utils.py
src/api/: __init__.py  base.py  language_api.py
src/handlers/: __init__.py  callback_data.py  delegate.py  habits.py  health.py  help.py  journal.py  menu.py  settings.py  start.py  stats.py  strict.py  tasks.py  today.py
src/handlers/language/: __init__.py  grammar.py  reading.py  settings.py
src/keyboards/: language.py
src/middleware/: __init__.py  rate_limit.py
src/utils/: __init__.py  helpers.py  validators.py
